src/test/ui/parser/pat-lt-bracket-6.stderr
error: expected one of `)`, `,`, or `@`, found `[`
  --> $DIR/pat-lt-bracket-6.rs:2:19
   |
LL |     let Test(&desc[..]) = x;
   |                   ^ expected one of `)`, `,`, or `@` here

error: aborting due to previous error

