src/test/ui/parser/pat-lt-bracket-6.rs
fn main() {
    let Test(&desc[..]) = x; //~ ERROR: expected one of `)`, `,`, or `@`, found `[`
}
